--- a/src/index.html
+++ b/src/index.html
@@ -53,6 +53,9 @@
               </h3>
             </li>
             <li class="intro__item">
+              <p class="intro__town">ваш город</p>
+            </li>
+            <li class="intro__item">
               <p class="intro__about">в вашем городе</p>
             </li>
             <li class="intro__item intro__item-button">
@@ -69,6 +72,10 @@
           </ul>
         </section>
         <section class="main">
+          <p class="main__intro">
+            Что такое
+            <span class="main__intro main__intro-eva">EVA</span> коврики?
+          </p>
           <ul class="main__list">
             <li class="main__card">
               <img
