--- a/src/index.html
+++ b/src/index.html
@@ -6,188 +6,204 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evarugs</title>
   </head>
-  <body class="body">
-    <div class="body__wrapper">
-      <header class="header">
-        <ul class="header__list">
-          <li class="header__item">
-            <a class="header__link header__link-vel" href="#"
-              >+375 292 292-29-29 (VEL)</a
-            >
-          </li>
-          <li class="header__item">
-            <a class="header__link header__link-mtc" href="#"
-              >+375 33 333-33-33 (МТС)</a
-            >
-          </li>
-          <li class="header__item">
-            <a class="header__link header__link-town" href="#">ваш город</a>
-          </li>
-          <li class="header__item">
+  <body>
+    <div class="body__wrapper"></div>
+    <header class="header">
+      <ul class="header__list">
+        <li class="header__item">
+          <a class="header__link header__link--vel" href="#"
+            >+375 29 292-29-29 (VEL)</a
+          >
+        </li>
+        <li class="header__item">
+          <a class="header__link header__link--mtc" href="#"
+            >+375 33 333-33-33 (МТС)</a
+          >
+        </li>
+        <li class="header__item">
+          <a class="header__link header__link--town" href="#">ваш город</a>
+        </li>
+        <li class="header__item">
+          <a class="header__link header__link--social" href="#"
+            >посетите нашу страницу</a
+          >
+        </li>
+      </ul>
+    </header>
+    <main class="main">
+      <section class="intro">
+        <img
+          class="intro__logo-321"
+          width="183px"
+          height="36px"
+          src="./images/intro/logo321.png"
+          alt="Evarug logo." />
+        <img
+          class="intro__logo-768"
+          width="281px"
+          height="60px"
+          src="./images/intro/logo768.png"
+          alt="Evarug logo." />
+        <img
+          class="intro__logo-1440"
+          width="268px"
+          height="60px"
+          src="./images/intro/logo1440.png"
+          alt="Evarug logo." />
+        <nav class="intro__navigation">
+          <ul class="intro__navigation-list">
+            <li class="intro__navigation-item">
+              <a
+                class="intro__navigation-link intro__navigation-link--feedback"
+                href="#"
+                >отзывы</a
+              >
+            </li>
+            <li class="navigation__item">
+              <a
+                class="intro__navigation-link intro__navigation-link--info"
+                href="#"
+                >что это?</a
+              >
+            </li>
+            <li class="navigation__item">
+              <a
+                class="intro__navigation-link intro__navigation-link--contact"
+                href="#"
+                >контакты</a
+              >
+            </li>
+          </ul>
+        </nav>
+        <h3 class="intro__info">Инновационные коврики для автомобиля</h3>
+        <span class="intro__about">в вашем городе</span>
+        <button class="intro__button">
+          <span class="intro__button-text"> заказать</span>
+        </button>
+        <p class="intro__outro">
+          Что такое <span class="intro__outro-eva">eva</span> коврики?
+        </p>
+      </section>
+      <section class="product">
+        <ul class="product__list">
+          <li class="product__card">
             <img
-              class="header__image"
-              src="./images/header/social.svg"
-              alt="icon instagramm" />
+              class="product__image"
+              width="264px"
+              height="172px"
+              src="./images/main/card1.jpg"
+              alt="Эва коврик." />
+            <h3 class="product__header">МАТЕРИАЛ</h3>
+            <p class="product__description">
+              Коврики EVA всесезонные и отличаются уникальной поверхностью
+              материала с ячейками ромбовидной формы. Из-за чего вода не
+              проливается при изъятии ковра и не плещется при езде. Коврики воду
+              не пропускают.
+            </p>
           </li>
-          <li class="header__item">
-            <a class="header__link header__link-social" href="#"
-              >посетите нашу страницу</a
-            >
+          <li class="product__card">
+            <img
+              class="product__image"
+              width="264px"
+              height="172px"
+              src="./images/main/card2.jpg"
+              alt="Эва коврик." />
+            <h3 class="product__header">ОТЛИЧИЯ</h3>
+            <p class="product__description">
+              Резиновые коврики загибаются и лезут на педали. EVA коврики такого
+              не допустят! Специальные липучки держат его в одном положении. При
+              желании, для водителя устанавливается подпятник из рельефного
+              алюминия.
+            </p>
+          </li>
+          <li class="product__card">
+            <img
+              class="product__image"
+              width="264px"
+              height="172px"
+              src="./images/main/card3.jpg"
+              alt="Эва коврик." />
+            <h3 class="product__header">РАСЦВЕТКА</h3>
+            <p class="product__description">
+              Автомобильные коврики EVA можно заказать и в индивидуальных
+              размерах и в разных цветах, которые комбинируется на выбор
+              покупателя с такими же цветами окантовочной полипропиленовой
+              ременной ленты.
+            </p>
           </li>
         </ul>
-      </header>
-      <main>
-        <section class="intro">
-          <ul class="intro__list">
-            <li class="intro__item">
-              <img
-                class="intro__logo"
-                src="./images/intro/logo.svg"
-                alt="Logo" />
-              <h4 class="intro__logo intro__logo-text">Evarugs</h4>
-            </li>
-            <li class="intro__item"></li>
-            <li class="intro__item">
-              <h3 class="intro__description">
-                Инновационные коврики для автомобиля
-              </h3>
-            </li>
-            <li class="intro__item">
-              <p class="intro__town">ваш город</p>
-            </li>
-            <li class="intro__item">
-              <p class="intro__about">в вашем городе</p>
-            </li>
-            <li class="intro__item intro__item-button">
-              <button class="intro__button">
-                <p class="intro__button-text">Заказать</p>
-              </button>
-            </li>
-            <li class="intro__item">
-              <p class="intro__outro">
-                Что такое
-                <span class="intro__outro intro__outro-eva">EVA</span> коврики?
-              </p>
-            </li>
-          </ul>
-        </section>
-        <section class="main">
-          <p class="main__intro">
-            Что такое
-            <span class="main__intro main__intro-eva">EVA</span> коврики?
-          </p>
-          <ul class="main__list">
-            <li class="main__card">
-              <img
-                class="main__image"
-                src="./images/main/card1.jpg"
-                alt="eva rug" />
-              <h3 class="main__header">МАТЕРИАЛ</h3>
-              <p class="main__description">
-                Коврики EVA всесезонные и отличаются уникальной поверхностью
-                материала с ячейками ромбовидной формы. Из-за чего вода не
-                проливается при изъятии ковра и не плещется при езде. Коврики
-                воду не пропускают.
-              </p>
-            </li>
-            <li class="main__card">
-              <img
-                class="main__image"
-                src="./images/main/card2.jpg"
-                alt="eva rug" />
-              <h3 class="main__header">ОТЛИЧИЯ</h3>
-              <p class="main__description">
-                Резиновые коврики загибаются и лезут на педали. EVA коврики
-                такого не допустят! Специальные липучки держат его в одном
-                положении. При желании, для водителя устанавливается подпятник
-                из рельефного алюминия.
-              </p>
-            </li>
-            <li class="main__card">
-              <img
-                class="main__image"
-                src="./images/main/card3.jpg"
-                alt="eva rug" />
-              <h3 class="main__header">РАСЦВЕТКА</h3>
-              <p class="main__description">
-                Автомобильные коврики EVA можно заказать и в индивидуальных
-                размерах и в разных цветах, которые комбинируется на выбор
-                покупателя с такими же цветами окантовочной полипропиленовой
-                ременной ленты.
-              </p>
-            </li>
-          </ul>
-        </section>
-        <section class="review">
-          <ul class="review__list">
-            <li class="review__card">
-              <img
-                class="review__foto"
-                src="./images/rewiew/people1.svg"
-                alt="people foto" />
-              <p class="review__feedback">
-                Коврики супер!!! Качество на высшем уровне!!! Удачи и побольше
-                заказов вам!!! Большое спасибо!
-              </p>
-              <hr class="review__decoration" />
-              <p class="review__initials">Константин В.</p>
-            </li>
-            <li class="review__card">
-              <img
-                class="review__foto"
-                src="./images/rewiew/people2.svg"
-                alt="people foto" />
-              <p class="review__feedback">
-                Покупала у ребят коврики для Хундай солярис в подарок молодому
-                человеку. Все очень понравилось. Буду советовать только вас.
-              </p>
-              <hr class="review__decoration" />
-              <p class="review__initials">Вера К.</p>
-            </li>
-            <li class="review__card review__card-last">
-              <img
-                class="review__foto"
-                src="./images/rewiew/people3.svg"
-                alt="people foto" />
-              <p class="review__feedback">
-                Спасибо, все приехало, поставил. Результатом доволен, в машине
-                супер! Заказывал на Ниссан.
-              </p>
-              <hr class="review__decoration" />
-              <p class="review__initials">Николай П.</p>
-            </li>
-          </ul>
-        </section>
-      </main>
+      </section>
+      <section class="review">
+        <ul class="review__list">
+          <li class="review__card">
+            <img
+              class="review__foto"
+              width="163px"
+              height="109px"
+              src="./images/rewiew/people1.svg"
+              alt="people foto" />
+            <p class="review__feedback">
+              Коврики супер!!! Качество на высшем уровне!!! Удачи и побольше
+              заказов вам!!! Большое спасибо!
+            </p>
+            <hr class="review__decoration" />
+            <p class="review__initials">Константин В.</p>
+          </li>
+          <li class="review__card">
+            <img
+              class="review__foto"
+              width="163px"
+              height="109px"
+              src="./images/rewiew/people2.svg"
+              alt="people foto" />
+            <p class="review__feedback">
+              Покупала у ребят коврики для Хундай солярис в подарок молодому
+              человеку. Все очень понравилось. Буду советовать только вас.
+            </p>
+            <hr class="review__decoration" />
+            <p class="review__initials">Вера К.</p>
+          </li>
+          <li class="review__card review__card--last">
+            <img
+              class="review__foto"
+              width="163px"
+              height="109px"
+              src="./images/rewiew/people3.svg"
+              alt="people foto" />
+            <p class="review__feedback">
+              Спасибо, все приехало, поставил. Результатом доволен, в машине
+              супер! Заказывал на Ниссан.
+            </p>
+            <hr class="review__decoration" />
+            <p class="review__initials">Николай П.</p>
+          </li>
+        </ul>
+      </section>
       <footer class="footer">
-        <ul class="footer__list">
-          <li class="footer__item">
-            <p class="footer__contact">КОНТАКТНЫЕ ТЕЛЕФОНЫ</p>
-            <a class="footer__link footer__link-vel" href="#"
-              >+375 29 292-29-29 (VEL)</a
-            >
-            <a class="footer__link footer__link-mtc" href="#">
-              +375 33 333-33-33 (МТС)</a
-            >
+        <p class="footer__contact-header">КОНТАКТНЫЕ ТЕЛЕФОНЫ</p>
+        <ul class="footer__contact">
+          <li class="footer__number footer__number--vel">
+            +375 29 292-29-29 (VEL)
           </li>
-          <li class="footer__item">
-            <p class="footer__social">МЫ В СОЦИАЛЬНЫХ СЕТЯХ</p>
-            <a class="footer__link footer__link-instagramm" href="#"
-              ><img
-                class="footer__image"
-                src="./images/footer/social.svg"
-                alt="logo instagramm"
-            /></a>
-          </li>
-          <li class="footer__item">
-            <p class="footer__about">О НАС</p>
-            <a class="footer__link footer__link-individually" href="#"
-              >Индивидуальное изготовление EVA ковриков для вашего автомобиля
-            </a>
-            <a class="footer__link footer__link-town" href="#">ваш город</a>
+          <li class="footer__number footer__number--mtc">
+            +375 33 333-33-33 (МТС)
           </li>
         </ul>
+        <p class="footer__social">МЫ В СОЦИАЛЬНЫХ СЕТЯХ</p>
+        <a class="footer__social-link" href="#"
+          ><img
+            class="footer__social-img"
+            width="33px"
+            height="33px"
+            src="./images/footer/social.svg"
+            alt="instagramm logo."
+        /></a>
+        <span class="footer__about">О НАС</span>
+        <p class="footer__individually">
+          Индивидуальное изготовление EVA ковриков для вашего автомобиля
+        </p>
+        <p class="footer__town">ваш город</p>
       </footer>
-    </div>
+    </main>
   </body>
 </html>
