--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Evarugs</title>
+    <script src="./scripts/script.js" defer></script>
   </head>
   <body>
     <div class="body__wrapper"></div>
@@ -39,19 +40,19 @@
               srcset="images/intro/logo768.png 1x"
               with="281px"
               height="60px"
-              type="image/png">
+              type="image/png" />
             <source
               media="(min-width: 1440px)"
               with="268px"
               height="60px"
               srcset="./images/intro/logo1440.png 1x"
-              type="image/png">
+              type="image/png" />
             <img
               class="intro__logo-icon"
               srcset="./images/intro/logo321.png"
               width="183px"
               height="36px"
-              alt="Логотип.">
+              alt="Логотип." />
           </picture>
         </a>
         <nav class="intro__navigation">
